--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,4 +18,12 @@
         <item name="android:navigationBarColor">@android:color/black</item>
         <item name="android:windowBackground">@color/blocked_background</item>
     </style>
+
+    <style name="ThemeOverlay.TimeTrapper.Dialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="colorSurface">@color/color_card_surface</item>
+        <item name="android:textColorPrimary">@color/color_on_surface</item>
+        <item name="android:textColorSecondary">@color/color_on_surface_muted</item>
+        <item name="materialAlertDialogTitleTextStyle">@style/TextAppearance.TimeTrapper.DialogTitle</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/TextAppearance.TimeTrapper.DialogBody</item>
+    </style>
 </resources>
