--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,4 +18,20 @@
         <item name="android:navigationBarColor">@android:color/black</item>
         <item name="android:windowBackground">@color/blocked_background</item>
     </style>
+
+    <style name="ThemeOverlay.TimeTrapper.Dialog" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
+        <item name="colorSurface">@color/color_card_surface</item>
+        <item name="android:textColorPrimary">@color/color_on_surface</item>
+        <item name="android:textColorSecondary">@color/color_on_surface_muted</item>
+        <item name="materialAlertDialogTitleTextStyle">@style/TextAppearance.TimeTrapper.DialogTitle</item>
+        <item name="materialAlertDialogBodyTextStyle">@style/TextAppearance.TimeTrapper.DialogBody</item>
+    </style>
+
+    <style name="TextAppearance.TimeTrapper.DialogTitle" parent="TextAppearance.MaterialComponents.Headline6">
+        <item name="android:textColor">@color/color_on_surface</item>
+    </style>
+
+    <style name="TextAppearance.TimeTrapper.DialogBody" parent="TextAppearance.MaterialComponents.Body1">
+        <item name="android:textColor">@color/color_on_surface_muted</item>
+    </style>
 </resources>
