--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <style name="Theme.TimeTrapper" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TimeTrapper" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/color_primary</item>
         <item name="colorPrimaryVariant">@color/color_primary_dark</item>
         <item name="colorOnPrimary">@color/white</item>
@@ -12,7 +12,7 @@
         <item name="android:navigationBarColor">@color/color_surface</item>
     </style>
 
-    <style name="Theme.TimeTrapper.Blocked" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.TimeTrapper.Blocked" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:windowFullscreen">true</item>
         <item name="android:statusBarColor">@android:color/black</item>
         <item name="android:navigationBarColor">@android:color/black</item>
